[gd_scene load_steps=6 format=3 uid="uid://b4qak7mbrg3fb"]

[ext_resource type="Texture2D" uid="uid://dd4wdabiaryqy" path="res://Tileset/Spaceship/SciFi Pack/dont_trespass.png" id="1_2yr7h"]
[ext_resource type="Script" path="res://Scripts/dont_trespass.gd" id="1_7mm7e"]
[ext_resource type="FontFile" uid="uid://d1gb3fyjed6vr" path="res://Assets/fonts/Welbut__.ttf" id="3_3n7cy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixwjk"]
size = Vector2(30, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jai0c"]
size = Vector2(41, 32)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_7mm7e")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_ixwjk")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("1_2yr7h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_jai0c")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -47.0
offset_top = 94.0
offset_right = 153.0
offset_bottom = 117.0
rotation = -1.5708
theme_override_fonts/font = ExtResource("3_3n7cy")
theme_override_font_sizes/font_size = 14
text = "Sign says 'In Construction'..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
